# vector-search-test-task

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
testtask/: api.py  populate_db.py  weavate.py
wiki_texts/: JavaScript.txt  Machine_learning.txt  Object-oriented_programming.txt  OpenAI.txt  Programming_language.txt  Python_(programming_language).txt
